correct alignment

--- a/site/app.css
+++ b/site/app.css
@@ -77,6 +77,7 @@ h1 {
     grid-column: 1 / span 1;
     font-weight: 900;
     font-size: larger;
+    align-items: center;
 }
 
 .pokemon img {
@@ -84,6 +85,11 @@ h1 {
     margin-left: 25px;
 }
 
+.pokemon figure {
+    text-align: center;
+    margin-right: 80%;
+}
+
 .pokemon figcaption {
-    margin-left: 100px;
+    font-size: 40px;
 }
